SOC-2789 | fix: change confirm icon size on mobile

--- a/front/main/app/styles/component/_discussion-categories-edit.scss
+++ b/front/main/app/styles/component/_discussion-categories-edit.scss
@@ -230,6 +230,11 @@ $success-icon-size: 80px;
 		line-height: 44px;
 		margin: 0;
 	}
+
+	.icon-submit {
+		height: 40px;
+		width: 40px;
+	}
 }
 
 .loading-overlay.categories-loading-overlay {
